--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "asspro",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -15,7 +15,7 @@
     "scrollreveal": "^4.0.9",
     "web-vitals": "^2.1.4"
   },
-  "homepage": "https://github.com/deepshikhalcb049/newprojectttt",
+  "homepage": "https://deepshikhalcb049.github.io/newwebsite/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
